--- a/public/css/pages/chat.styl
+++ b/public/css/pages/chat.styl
@@ -169,6 +169,7 @@
     padding: 5px
     border-top: 1px solid #eee
     width: 99%
+    vertical-align: top
 
   .message
     font-size: $font-size-small
